# multi_evaluator

./: README.md  pyproject.toml
evaluate/: __init__.py
evaluate/metrics/: __init__.py  r2.py  sensitivity.py  specificity.py
evaluate/schemas/: evaluators.py  metrics.py
metrics/: r2.py  sensitivity.py  specificity.py
schemas/: evaluators.py  metrics.py
utils/: validators.py
