[tool.poetry]
name = "evaluate"
version = "0.1.0"
description = "Calculate common and custom ML eval metrics"
authors = ["Adam Smith <the.economy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pydantic = "^2.5.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
